Update pages and add images

--- a/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectIntroduction.html
+++ b/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectIntroduction.html
@@ -56,13 +56,14 @@
         </section>
 
         <section class="card" aria-label="Introduction Image">
-            <img src="./Example.png" alt="Table Summarizing Ecological Factors">
+            <img src="./Images/Introduction_Variables_Chart.png" alt="Table Summarizing Ecological Factors">
             <div class="image_caption">
-                Something
+                A table briefly describing the ecological variables covered in a dataset provided by NASA. <br>
+                These variables will play a large part in future research.
             </div>
         </section>
 
-        <section class="card" aria-label="Project Inspiration">
+        <section class="card" aria-label="Questions">
             <p>
                 This introduction leads to a series of questions that further analysis will focus on:
             </p>
