Upload Clustering and PCA pages, with images
Uploaded the Clustering and Principal Component Analysis pages, updated the links to them from the navigation bar, and the images that accompany them.

--- a/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectIntroduction.html
+++ b/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectIntroduction.html
@@ -12,8 +12,8 @@
     <div class="nav_title">Regional Climate<br>Factor Analysis</div>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Introduction</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectDataPrepEDA.html">Data Prep/<br>EDA</a>
-    <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Clustering</a>
-    <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Principle<br>Component<br>Analysis</a>
+    <a class="nav_link" href="./MachineLearningForDataScienceProjectClustering.html">Clustering</a>
+    <a class="nav_link" href="./MachineLearningForDataScienceProjectPCA.html">Principal<br>Component<br>Analysis</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Naive<br>Bayes</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Decision<br>Trees</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Support<br>Vector<br>Machines</a>
@@ -41,6 +41,11 @@
                 These datasets contain information about many ecological variables, some extra details about each country, climate model predictions, and climate observations.
                 Through the combined usage of these datasets, analysis into the impacts of these ecological variables as well as the predictions of climate models can proceed.
             </p>
+            <img src="./Images/Introduction_NASA_Forecast_Ensemble.jpeg" alt="Graph showing a climate model ensemble example">
+            <div class="image_caption">
+                A graph showing an example of a climate model ensemble with uncertainty, re-posted by NASA as part of a study summary. <br>
+                (https://science.nasa.gov/earth/climate-change/study-confirms-climate-models-are-getting-future-warming-projections-right/)
+            </div>
         </section>
 
         <section class="card" aria-label="Project Inspiration">
