--- a/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectDataPrepEDA.html
+++ b/pages/MachineLearningForDataScienceProject/MachineLearningForDataScienceProjectDataPrepEDA.html
@@ -12,8 +12,8 @@
     <div class="nav_title">Regional Climate<br>Factor Analysis</div>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Introduction</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectDataPrepEDA.html">Data Prep/<br>EDA</a>
-    <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Clustering</a>
-    <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Principle<br>Component<br>Analysis</a>
+    <a class="nav_link" href="./MachineLearningForDataScienceProjectClustering.html">Clustering</a>
+    <a class="nav_link" href="./MachineLearningForDataScienceProjectPCA.html">Principal<br>Component<br>Analysis</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Naive<br>Bayes</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Decision<br>Trees</a>
     <a class="nav_link" href="./MachineLearningForDataScienceProjectIntroduction.html">Support<br>Vector<br>Machines</a>
